@@ -169,8 +169,7 @@ static int unit_walktoxy_timer(int tid,unsigned int tick,int id,int data)
 			sd->areanpc_id=0;
 		if (sd->state.gmaster_flag &&
 			(battle_config.guild_aura&(agit_flag?2:1)) &&
-			(battle_config.guild_aura&
-				(map[bl->m].flag.gvg || map[bl->m].flag.gvg_castle?8:4))
+			(battle_config.guild_aura&(map_flag_gvg2(bl->m)?8:4))
 		)
 		{ //Guild Aura: Likely needs to be recoded, this method seems inefficient.
 			struct guild *g = sd->state.gmaster_flag;
